tests/cases/errors/parse_error/main.sv
module Top;
  int x
  int y;
endmodule
